--- a/Week 07 - Deep Learning for Sequence Modeling/2- Transformers.ipynb
+++ b/Week 07 - Deep Learning for Sequence Modeling/2- Transformers.ipynb
@@ -9,7 +9,7 @@
       "source": [
         "# Transformers For Text Classification\n",
         "\n",
-        "{{ badge }}"
+        "<!--<badge>--><a href=\"https://colab.research.google.com/github/mthd98/Machine-Learning-from-Zero-to-Hero-Bootcamp-v1/blob/main/Week 07 - Deep Learning for Sequence Modeling/2- Transformers.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a><!--</badge>-->"
       ]
     },
     {
@@ -153,7 +153,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "mkdir: cannot create directory ‘/root/.kaggle’: File exists\n",
+            "mkdir: cannot create directory \u2018/root/.kaggle\u2019: File exists\n",
             "total 60\n",
             "drwx------ 1 root root 4096 Jul 14 13:48 .\n",
             "drwxr-xr-x 1 root root 4096 Jul 14 13:46 ..\n",
@@ -305,8 +305,8 @@
         "id": "6EZbPdXc2gFn"
       },
       "source": [
-        "If MNIST is the “hello world” of computer vision, then the IMDb reviews dataset is\n",
-        "the “hello world” of natural language processing: it consists of 50,000 movie reviews\n",
+        "If MNIST is the \u201chello world\u201d of computer vision, then the IMDb reviews dataset is\n",
+        "the \u201chello world\u201d of natural language processing: it consists of 50,000 movie reviews\n",
         "in English (25,000 for training, 25,000 for testing) extracted from the famous Internet\n",
         "Movie Database, along with a simple binary target for each review indicating whether\n",
         "it is negative (0) or positive (1).\n",
@@ -509,7 +509,7 @@
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
-              "<p>50000 rows × 2 columns</p>\n",
+              "<p>50000 rows \u00d7 2 columns</p>\n",
               "</div>\n",
               "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-255fbeae-659f-49ca-a674-35f86ebb4a6a')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
@@ -774,7 +774,7 @@
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
-              "<p>50000 rows × 2 columns</p>\n",
+              "<p>50000 rows \u00d7 2 columns</p>\n",
               "</div>\n",
               "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-fe053e8d-65bb-4f61-9a1b-23b99ec1effd')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
@@ -2446,21 +2446,21 @@
       },
       "source": [
         "### What is positional encoding and Why do we need it in the first place?\n",
-        "Position and order of words are the essential parts of any language. They define the grammar and thus the actual semantics of a sentence. Recurrent Neural Networks (RNNs) inherently take the order of word into account; They parse a sentence word by word in a sequential manner. This will integrate the words’ order in the backbone of RNNs.\n",
+        "Position and order of words are the essential parts of any language. They define the grammar and thus the actual semantics of a sentence. Recurrent Neural Networks (RNNs) inherently take the order of word into account; They parse a sentence word by word in a sequential manner. This will integrate the words\u2019 order in the backbone of RNNs.\n",
         "\n",
-        "But the Transformer architecture ditched the recurrence mechanism in favor of multi-head self-attention mechanism. Avoiding the RNNs’ method of recurrence will result in massive speed-up in the training time. And theoretically, it can capture longer dependencies in a sentence.\n",
+        "But the Transformer architecture ditched the recurrence mechanism in favor of multi-head self-attention mechanism. Avoiding the RNNs\u2019 method of recurrence will result in massive speed-up in the training time. And theoretically, it can capture longer dependencies in a sentence.\n",
         "\n",
-        "As each word in a sentence simultaneously flows through the Transformer’s encoder/decoder stack, The model itself doesn’t have any sense of position/order for each word. Consequently, there’s still the need for a way to incorporate the order of the words into our model.\n",
+        "As each word in a sentence simultaneously flows through the Transformer\u2019s encoder/decoder stack, The model itself doesn\u2019t have any sense of position/order for each word. Consequently, there\u2019s still the need for a way to incorporate the order of the words into our model.\n",
         "\n",
-        "One possible solution to give the model some sense of order is to add a piece of information to each word about its position in the sentence. We call this “piece of information”, the positional encoding.\n",
+        "One possible solution to give the model some sense of order is to add a piece of information to each word about its position in the sentence. We call this \u201cpiece of information\u201d, the positional encoding.\n",
         "\n",
-        "The first idea that might come to mind is to assign a number to each time-step within the [0, 1] range in which 0 means the first word and 1 is the last time-step. Could you figure out what kind of issues it would cause? One of the problems it will introduce is that you can’t figure out how many words are present within a specific range. In other words, time-step delta doesn’t have consistent meaning across different sentences.\n",
+        "The first idea that might come to mind is to assign a number to each time-step within the [0, 1] range in which 0 means the first word and 1 is the last time-step. Could you figure out what kind of issues it would cause? One of the problems it will introduce is that you can\u2019t figure out how many words are present within a specific range. In other words, time-step delta doesn\u2019t have consistent meaning across different sentences.\n",
         "\n",
-        "Another idea is to assign a number to each time-step linearly. That is, the first word is given “1”, the second word is given “2”, and so on. The problem with this approach is that not only the values could get quite large, but also our model can face sentences longer than the ones in training. In addition, our model may not see any sample with one specific length which would hurt generalization of our model.\n",
+        "Another idea is to assign a number to each time-step linearly. That is, the first word is given \u201c1\u201d, the second word is given \u201c2\u201d, and so on. The problem with this approach is that not only the values could get quite large, but also our model can face sentences longer than the ones in training. In addition, our model may not see any sample with one specific length which would hurt generalization of our model.\n",
         "\n",
         "Ideally, the following criteria should be satisfied:\n",
         "\n",
-        "1. It should output a unique encoding for each time-step (word’s position in a sentence)\n",
+        "1. It should output a unique encoding for each time-step (word\u2019s position in a sentence)\n",
         "Distance between any two time-steps should be consistent across sentences with different lengths.\n",
         "2. Our model should generalize to longer sentences without any efforts. Its values should be bounded.\n",
         "3. It must be deterministic."
