--- a/Week 09 - Sequence Modeling Applications/1- Text_Similarity.ipynb
+++ b/Week 09 - Sequence Modeling Applications/1- Text_Similarity.ipynb
@@ -9,7 +9,7 @@
       "source": [
         "# Text Similarity\n",
         "\n",
-        "{{ badge }}\n",
+        "<!--<badge>--><a href=\"https://colab.research.google.com/github/mthd98/Machine-Learning-from-Zero-to-Hero-Bootcamp-v1/blob/main/Week 09 - Sequence Modeling Applications/1- Text_Similarity.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a><!--</badge>-->\n",
         "\n",
         "\n",
         "Text similarity has to determine how 'close' two pieces of text are both in surface closeness `lexical similarity` and meaning `semantic similarity`.\n",
@@ -294,7 +294,7 @@
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
-              "<p>404290 rows × 6 columns</p>\n",
+              "<p>404290 rows \u00d7 6 columns</p>\n",
               "</div>\n",
               "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-01543cd2-be7b-49b3-8828-66feae71ab50')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
@@ -663,7 +663,7 @@
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
-              "<p>404287 rows × 3 columns</p>\n",
+              "<p>404287 rows \u00d7 3 columns</p>\n",
               "</div>\n",
               "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-9f206bf4-b6c4-49cd-b237-f4adea730406')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
@@ -1014,7 +1014,7 @@
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
-              "<p>268673 rows × 3 columns</p>\n",
+              "<p>268673 rows \u00d7 3 columns</p>\n",
               "</div>\n",
               "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-9639c1d9-a76f-437c-adbe-e4eef30f7a73')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
