--- a/Week 09 - Sequence Modeling Applications/3- Chatbot.ipynb
+++ b/Week 09 - Sequence Modeling Applications/3- Chatbot.ipynb
@@ -9,11 +9,11 @@
       "source": [
         "# Chatbot\n",
         "\n",
-        "{{ badge }}\n",
+        "<!--<badge>--><a href=\"https://colab.research.google.com/github/mthd98/Machine-Learning-from-Zero-to-Hero-Bootcamp-v1/blob/main/Week 09 - Sequence Modeling Applications/3- Chatbot.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a><!--</badge>-->\n",
         "\n",
         "\n",
         "\n",
-        "A chatbot or chatterbot is a software application used to conduct an on-line chat conversation via text or text-to-speech, in lieu of providing direct contact with a live human agent.​"
+        "A chatbot or chatterbot is a software application used to conduct an on-line chat conversation via text or text-to-speech, in lieu of providing direct contact with a live human agent.\u200b"
       ]
     },
     {
@@ -292,7 +292,7 @@
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
-              "<p>139409 rows × 7 columns</p>\n",
+              "<p>139409 rows \u00d7 7 columns</p>\n",
               "</div>\n",
               "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-381fed9f-9c84-440a-9636-5063b3c4b6ee')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
@@ -557,7 +557,7 @@
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
-              "<p>139409 rows × 2 columns</p>\n",
+              "<p>139409 rows \u00d7 2 columns</p>\n",
               "</div>\n",
               "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f1080a0b-e814-4900-8eff-c97130aec301')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
@@ -786,7 +786,7 @@
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
-              "<p>139409 rows × 2 columns</p>\n",
+              "<p>139409 rows \u00d7 2 columns</p>\n",
               "</div>\n",
               "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-782cfaa7-890a-4473-b40e-5f67763e6a49')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
@@ -1007,7 +1007,7 @@
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
-              "<p>139409 rows × 2 columns</p>\n",
+              "<p>139409 rows \u00d7 2 columns</p>\n",
               "</div>\n",
               "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-5439de5a-d1b6-431d-b324-84ad55d8111f')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
@@ -1470,7 +1470,7 @@
         "id": "qmClOrKj405N"
       },
       "source": [
-        "Let’s take a look at a simple neural machine translation model that will translate\n",
+        "Let\u2019s take a look at a simple neural machine translation model that will translate\n",
         "English sentences to Spanish.\n",
         "In short, the English sentences are fed to the encoder, and the decoder outputs the\n",
         "Spanish translations. Note that the Spanish translations are also used as inputs to the\n",
@@ -1479,7 +1479,7 @@
         "output). For the very first word, it is given the start-of-sequence (`<START>`) token. The\n",
         "decoder is expected to end the sentence with an end-of-sequence (`<END>`) token.\n",
         "\n",
-        "Each word is initially represented by its ID (e.g., 288 for the word “milk”). Next, an\n",
+        "Each word is initially represented by its ID (e.g., 288 for the word \u201cmilk\u201d). Next, an\n",
         "embedding layer returns the word embedding. These word embeddings are what is\n",
         "actually fed to the encoder and the decoder."
       ]
@@ -1886,7 +1886,7 @@
         "We first define two variables `w1` and `w2`, then we create a `tf.GradientTape` context\n",
         "that will automatically record every operation that involves a variable, and finally we\n",
         "ask this tape to compute the gradients of the result `z` with regard to both variables\n",
-        "`[w1, w2]`. Let’s take a look at the gradients that TensorFlow computed:"
+        "`[w1, w2]`. Let\u2019s take a look at the gradients that TensorFlow computed:"
       ]
     },
     {
@@ -1919,7 +1919,7 @@
       },
       "source": [
         "Perfect! Not only is the result accurate (the precision is only limited by the floating point errors), but the `gradient()` method only goes through the recorded computations once (in reverse order), no matter how many variables there are, so it is\n",
-        "incredibly efficient. It’s like magic!"
+        "incredibly efficient. It\u2019s like magic!"
       ]
     },
     {
@@ -2013,7 +2013,7 @@
         "(usually the loss) with regard to a set of values (usually the model parameters). This is\n",
         "where reverse-mode autodiff shines, as it just needs to do one forward pass and one\n",
         "reverse pass to get all the gradients at once. If you try to compute the gradients of a\n",
-        "vector, for example a vector containing multiple losses, then TensorFlow will compute the gradients of the vector’s sum. "
+        "vector, for example a vector containing multiple losses, then TensorFlow will compute the gradients of the vector\u2019s sum. "
       ]
     },
     {
